--- a/config/content.htm
+++ b/config/content.htm
@@ -5,7 +5,7 @@
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a></p>
 <p><a href="https://www.blogger.com/">https://www.blogger.com/</a></p>
 <p>本人<span>Repository</span>(倉儲):<a href="https://github.com/50833105/wcmj2020">https://github.com/50833105/wcmj2020</a></p>
-<p><span>本班Gitter (討論區): </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a><span> </span></p>
+<p>本人<span>Web si</span><span><span> </span>(網站):</span><span>本班Gitter (討論區): </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a><span> </span></p>
 <h1><span>主題</span></h1>
 <h2>Week 6</h2>
 <h4>Online education</h4>
@@ -35,6 +35,18 @@
 <h2>Week 8</h2>
 <p>請重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等).</p>
 <p>學會利用 ShareX 與 OBS 拍攝螢幕操作影片, 並將個人維護倉儲與網站的過程影片放入個人網站中.</p>
+<h2>Week 9</h2>
+<h3><strong>電腦軟硬體簡介</strong></h3>
+<p>硬體；可觸摸到的，例如:鍵盤、滑鼠</p>
+<p>主機:包含主機板、記憶體、顯示卡、插孔等等</p>
+<p>軟體；不可觸摸到的，例如:office系統</p>
+<p>作業系統；Windows(記事本、接龍、踩地雷)</p>
+<p>應用軟體、商用軟體、共享軟體(免費，但有限時或功能限制)、綠色軟體(免費免安裝的軟體)</p>
+<h3><strong>網路架構與設定的簡介</strong></h3>
+<p>網際網路:每台電腦都有IP位置(編號)。</p>
+<p>             實體建置:集線器或網路交換器。</p>
+<p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS。</p>
+<p>設定Proxy(視情況所需)</p>
 <h1>資料來源</h1>
-<p><span>Web site (網站): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
+<p><span>Web si (網站te): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
 <p>指導老師:嚴家銘</p>
