--- a/content/有關本網站.html
+++ b/content/有關本網站.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -161,7 +161,7 @@ img.add_border {
 <p><a href="https://github.com/mdecourse/cmsimde">https://github.com/mdecourse/cmsimde</a></p>
 <p><a href="https://www.blogger.com/">https://www.blogger.com/</a></p>
 <p>本人<span>Repository</span>(倉儲):<a href="https://github.com/50833105/wcmj2020">https://github.com/50833105/wcmj2020</a></p>
-<p><span>本班Gitter (討論區): </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a><span> </span></p>
+<p>本人<span>Web si</span><span><span> </span>(網站):</span><span>本班Gitter (討論區): </span><a href="https://gitter.im/mdecourse/wcmj2020">https://gitter.im/mdecourse/wcmj2020</a><span> </span></p>
 <br /> <a href='主題.html'>Next</a> >> 主題</div>
         
     <!-- footer -->
