--- a/config/content.htm
+++ b/config/content.htm
@@ -45,7 +45,7 @@
 <h3><strong>網路架構與設定的簡介</strong></h3>
 <p>網際網路:每台電腦都有IP位置(編號)。</p>
 <p>             實體建置:集線器或網路交換器。</p>
-<p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS。</p>
+<p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS</p>
 <p>設定Proxy(視情況所需)</p>
 <h1>資料來源</h1>
 <p><span>Web si (網站te): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
