--- a/content/網路架構與設定的簡介.html
+++ b/content/網路架構與設定的簡介.html
@@ -157,7 +157,7 @@ img.add_border {
     <div id="tipue_search_content">電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>網路架構與設定的簡介</h1>
 <p>網際網路:每台電腦都有IP位置(編號)。</p>
 <p>             實體建置:集線器或網路交換器。</p>
-<p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS。</p>
+<p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS</p>
 <p>設定Proxy(視情況所需)</p>
 <br />電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
         
