--- a/content/資料來源.html
+++ b/content/資料來源.html
@@ -156,8 +156,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">網路架構與設定的簡介 << <a href='網路架構與設定的簡介.html'>Previous</a> <br /><h1>資料來源</h1>
 <p><span>Web si (網站te): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
-<p>指導老師:嚴家銘</p>
-<br />網路架構與設定的簡介 << <a href='網路架構與設定的簡介.html'>Previous</a> </div>
+<p>指導老師:嚴家銘</p><br />網路架構與設定的簡介 << <a href='網路架構與設定的簡介.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
