--- a/content/網路架構與設定的簡介.html
+++ b/content/網路架構與設定的簡介.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,12 +154,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>網路架構與設定的簡介</h1>
+    <div id="tipue_search_content">電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='Week 10.html'>Next</a> >> Week 10<br /><h1>網路架構與設定的簡介</h1>
 <p>網際網路:每台電腦都有IP位置(編號)。</p>
 <p>             實體建置:集線器或網路交換器。</p>
 <p>網路設定:由設定&gt;乙太網路或WIFI&gt;網路和共用中心&gt;內容&gt;調整IPv4之IP及DNS</p>
 <p>設定Proxy(視情況所需)</p>
-<br />電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
+<br />電腦軟硬體簡介 << <a href='電腦軟硬體簡介.html'>Previous</a> <a href='Week 10.html'>Next</a> >> Week 10</div>
         
     <!-- footer -->
       <div class="container">
