--- a/content/Week 10.html
+++ b/content/Week 10.html
@@ -154,8 +154,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week 8 << <a href='Week 8.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介<br /><h1>Week 9</h1>
-<br />Week 8 << <a href='Week 8.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介</div>
+    <div id="tipue_search_content">網路架構與設定的簡介 << <a href='網路架構與設定的簡介.html'>Previous</a> <a href='以SSH維護倉儲.html'>Next</a> >> 以SSH維護倉儲<br /><h1>Week 10</h1>
+<br />網路架構與設定的簡介 << <a href='網路架構與設定的簡介.html'>Previous</a> <a href='以SSH維護倉儲.html'>Next</a> >> 以SSH維護倉儲</div>
         
     <!-- footer -->
       <div class="container">
