--- a/content/Week 11.html
+++ b/content/Week 11.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li><a href='Week 11.html'>Week 11</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,8 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">以SSH維護倉儲 << <a href='以SSH維護倉儲.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源<br /><h1>Week 11</h1>
-<br />以SSH維護倉儲 << <a href='以SSH維護倉儲.html'>Previous</a> <a href='資料來源.html'>Next</a> >> 資料來源</div>
+    <div id="tipue_search_content">以SSH維護倉儲 << <a href='以SSH維護倉儲.html'>Previous</a> <a href='Leo Editor 基本用法.html'>Next</a> >> Leo Editor 基本用法<br /><h1>Week 11</h1>
+<p>說明如還利用[Leo Editor]管理[CMSiMDE]網際網路內容管理系統中[Pelican]網誌。其中有共用、近端與遠端等三個設定檔案的修改，以及兩個用程式按鈕轉檔的使用。</p>
+<p></p>
+<br />以SSH維護倉儲 << <a href='以SSH維護倉儲.html'>Previous</a> <a href='Leo Editor 基本用法.html'>Next</a> >> Leo Editor 基本用法</div>
         
     <!-- footer -->
       <div class="container">
