--- a/content/Week 9.html
+++ b/content/Week 9.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li><a href='Week 11.html'>Week 11</a></li></ul><li><a href='資料來源.html'>資料來源</a></li>
+                     <li><a href='有關本網站.html'>有關本網站</a><li class='has-children'><a href='主題.html'>主題</a><ul class='dropdown'><li><a href='Week 6.html'>Week 6</a><li><a href='Week 7.html'>Week 7</a><li><a href='Week 8.html'>Week 8</a><li class='has-children'><a href='Week 9.html'>Week 9</a><ul class='dropdown'><li><a href='電腦軟硬體簡介.html'>電腦軟硬體簡介</a><li><a href='網路架構與設定的簡介.html'>網路架構與設定的簡介</a></li></ul><li class='has-children'><a href='Week 10.html'>Week 10</a><ul class='dropdown'><li><a href='以SSH維護倉儲.html'>以SSH維護倉儲</a></li></ul><li class='has-children'><a href='Week 11.html'>Week 11</a><ul class='dropdown'><li><a href='Leo Editor 基本用法.html'>Leo Editor 基本用法</a><li><a href='三個檔案設定的修改.html'>三個檔案設定的修改</a></li></li></ul></ul><li><a href='資料來源.html'>資料來源</a></li>
                       </ul>
                 </nav>
               </div>
@@ -155,6 +155,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Week 8 << <a href='Week 8.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介<br /><h1>Week 9</h1>
+<p>介紹電腦軟硬體及網路架構與設定的簡介</p>
 <br />Week 8 << <a href='Week 8.html'>Previous</a> <a href='電腦軟硬體簡介.html'>Next</a> >> 電腦軟硬體簡介</div>
         
     <!-- footer -->
