--- a/config/content.htm
+++ b/config/content.htm
@@ -983,3 +983,18 @@
 <h1>資料來源</h1>
 <p><span>Web si (網站te): </span><a href="https://mde.tw/wcmj2020">https://mde.tw/wcmj2020</a><span> </span></p>
 <p>指導老師:嚴家銘</p>
+<h1>我的興趣</h1>
+<p>我的興趣是研究槍械以及各式武器，我想帶給更多人認識這些事物。</p>
+<h2>手槍(Handgun)</h2>
+<p>手槍，又稱手銃、拳銃，是一種短小且便於攜帶的個人防衛武器，射程大約50公尺，通常使用9毫米手槍彈，包括Glock P226 ock P226 等手槍都有使用，也有一些大口徑子彈，例如.50手槍彈，使用的有沙漠之鷹及一些左輪手槍。手槍通常是用來給執法單位或是國安人員使用。在部隊中，通常只有軍官或士官配有手槍，或是在特殊單位，例如：特勤單位、特戰單位等作為復武器使用。常見的手槍重量大約在500~700公克，然而，有些大口徑的手槍卻可以到1200公克。</p>
+<p></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Glock_17_Gen_5_French_Armed_Forces_standard_version.jpg/220px-Glock_17_Gen_5_French_Armed_Forces_standard_version.jpg"/><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Desert_Eagle_Chrome.JPG/250px-Desert_Eagle_Chrome.JPG"/></p>
+<p>台灣自行研發的手槍為T75/T75K1/K2/K3，此四型是國防部參照貝瑞塔M9手槍所研發。全槍重約0.95公斤，使用9毫米手槍彈，目前發配於中華民國國軍、中華民國特種警察、法務部矯正署、中華民國法務部、法務部調查局、海洋委員會海巡署、金融機構駐衛警。</p>
+<p><img alt="T75K1 by James Tung.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/T75K1_by_James_Tung.JPG/300px-T75K1_by_James_Tung.JPG"/></p>
+<h2>突擊步槍(Assault Rifle)</h2>
+<p>突擊步槍作為現代各國軍隊的只要武器，發展出許多不同的擊發方式。最早的突擊步槍為二戰時期德意志軍隊所使用的MP44，使用7.62毫米步槍彈，可謂是當時最先進的武器之一，後來各國開始研發自己的突擊步槍。美國自二戰時期配備的是M1 <span>Garand，此槍為八發半自動步槍使用7.62毫米步槍彈，後來被M14取代，而現代則是使用AR-15系列的突擊步槍，著名的M16或是M4也都是此系列的步槍。</span></p>
+<p><span><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Sturmgewehr_44.jpg/250px-Sturmgewehr_44.jpg"/><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Sam16a1.jpg/250px-Sam16a1.jpg"/></span></p>
+<p><span><img alt="Stag2wi.jpg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Stag2wi.jpg/300px-Stag2wi.jpg"/></span></p>
+<p><span>台灣研發的步槍為T65K1/K2/K3、T86及T91，而我們也是參照AR-15的擊發方式所研發，使用5.56步槍彈。</span></p>
+<p><span><img alt="TwT65.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/TwT65.JPG/300px-TwT65.JPG"/><img alt="T86-2.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/T86-2.JPG/220px-T86-2.JPG"/></span></p>
+<p><span><img alt="T91-3 (65).JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/T91-3_%2865%29.JPG/300px-T91-3_%2865%29.JPG"/></span></p>
