--- a/content/我的興趣.html
+++ b/content/我的興趣.html
@@ -154,12 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8<br /><h1>Week 7</h1>
-<h4>下載可攜程式系統</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IOauashmKho" width="560"></iframe></p>
-<h4>利用 git 指令建立 cmsimde 網站</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/NJTQulLMXnU" width="560"></iframe></p>
-<br />Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8</div>
+    <div id="tipue_search_content">資料來源 << <a href='資料來源.html'>Previous</a> <a href='手槍(Handgun).html'>Next</a> >> 手槍(Handgun)<br /><h1>我的興趣</h1>
+<p>我的興趣是研究槍械以及各式武器，我想帶給更多人認識這些事物。</p>
+<br />資料來源 << <a href='資料來源.html'>Previous</a> <a href='手槍(Handgun).html'>Next</a> >> 手槍(Handgun)</div>
         
     <!-- footer -->
       <div class="container">
