--- a/content/手槍(Handgun).html
+++ b/content/手槍(Handgun).html
@@ -154,12 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8<br /><h1>Week 7</h1>
-<h4>下載可攜程式系統</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IOauashmKho" width="560"></iframe></p>
-<h4>利用 git 指令建立 cmsimde 網站</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/NJTQulLMXnU" width="560"></iframe></p>
-<br />Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8</div>
+    <div id="tipue_search_content">我的興趣 << <a href='我的興趣.html'>Previous</a> <a href='突擊步槍(Assault Rifle).html'>Next</a> >> 突擊步槍(Assault Rifle)<br /><h1>手槍(Handgun)</h1>
+<p>手槍，又稱手銃、拳銃，是一種短小且便於攜帶的個人防衛武器，射程大約50公尺，通常使用9毫米手槍彈，包括Glock P226 ock P226 等手槍都有使用，也有一些大口徑子彈，例如.50手槍彈，使用的有沙漠之鷹及一些左輪手槍。手槍通常是用來給執法單位或是國安人員使用。在部隊中，通常只有軍官或士官配有手槍，或是在特殊單位，例如：特勤單位、特戰單位等作為復武器使用。常見的手槍重量大約在500~700公克，然而，有些大口徑的手槍卻可以到1200公克。</p>
+<p></p>
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Glock_17_Gen_5_French_Armed_Forces_standard_version.jpg/220px-Glock_17_Gen_5_French_Armed_Forces_standard_version.jpg"/><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Desert_Eagle_Chrome.JPG/250px-Desert_Eagle_Chrome.JPG"/></p>
+<p>台灣自行研發的手槍為T75/T75K1/K2/K3，此四型是國防部參照貝瑞塔M9手槍所研發。全槍重約0.95公斤，使用9毫米手槍彈，目前發配於中華民國國軍、中華民國特種警察、法務部矯正署、中華民國法務部、法務部調查局、海洋委員會海巡署、金融機構駐衛警。</p>
+<p><img alt="T75K1 by James Tung.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7d/T75K1_by_James_Tung.JPG/300px-T75K1_by_James_Tung.JPG"/></p>
+<br />我的興趣 << <a href='我的興趣.html'>Previous</a> <a href='突擊步槍(Assault Rifle).html'>Next</a> >> 突擊步槍(Assault Rifle)</div>
         
     <!-- footer -->
       <div class="container">
