--- a/content/突擊步槍(Assault Rifle).html
+++ b/content/突擊步槍(Assault Rifle).html
@@ -154,12 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8<br /><h1>Week 7</h1>
-<h4>下載可攜程式系統</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/IOauashmKho" width="560"></iframe></p>
-<h4>利用 git 指令建立 cmsimde 網站</h4>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" data-mce-fragment="1" frameborder="0" height="315" src="https://www.youtube.com/embed/NJTQulLMXnU" width="560"></iframe></p>
-<br />Week 6 << <a href='Week 6.html'>Previous</a> <a href='Week 8.html'>Next</a> >> Week 8</div>
+    <div id="tipue_search_content">手槍(Handgun) << <a href='手槍(Handgun).html'>Previous</a> <br /><h1>突擊步槍(Assault Rifle)</h1>
+<p>突擊步槍作為現代各國軍隊的只要武器，發展出許多不同的擊發方式。最早的突擊步槍為二戰時期德意志軍隊所使用的MP44，使用7.62毫米步槍彈，可謂是當時最先進的武器之一，後來各國開始研發自己的突擊步槍。美國自二戰時期配備的是M1 <span>Garand，此槍為八發半自動步槍使用7.62毫米步槍彈，後來被M14取代，而現代則是使用AR-15系列的突擊步槍，著名的M16或是M4也都是此系列的步槍。</span></p>
+<p><span><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/47/Sturmgewehr_44.jpg/250px-Sturmgewehr_44.jpg"/><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bb/Sam16a1.jpg/250px-Sam16a1.jpg"/></span></p>
+<p><span><img alt="Stag2wi.jpg" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/Stag2wi.jpg/300px-Stag2wi.jpg"/></span></p>
+<p><span>台灣研發的步槍為T65K1/K2/K3、T86及T91，而我們也是參照AR-15的擊發方式所研發，使用5.56步槍彈。</span></p>
+<p><span><img alt="TwT65.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/TwT65.JPG/300px-TwT65.JPG"/><img alt="T86-2.JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/T86-2.JPG/220px-T86-2.JPG"/></span></p>
+<p><span><img alt="T91-3 (65).JPG" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/T91-3_%2865%29.JPG/300px-T91-3_%2865%29.JPG"/></span></p><br />手槍(Handgun) << <a href='手槍(Handgun).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
